--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,10 +20,10 @@ jobs:
           coverage: xdebug
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "::set-outputs name=dir$(composer config cache-files-dir)"
+        run: echo "::set-output name=dir$(composer config cache-files-dir)"
       - name: Cache composer dependencies
         uses: actions/cache@v3
         with:
-          path: ${{ steps.composer-cache.outputs.dir }}
+          path: ${{ steps.composer-cache.output.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
