--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Testing project
 on: [push]
 jobs:
   symfony:
-    name: Symfony (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
+    name: Symfony (PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }})
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
@@ -11,7 +11,7 @@ jobs:
         php-versions: ['8.2']
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
@@ -20,24 +20,11 @@ jobs:
           coverage: xdebug
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+        ##run: echo "::set-output name=dir$(composer config cache-files-dir)"
+        run: echo "name=dir$(composer config cache-files-dir)" $GITHUB_OUTPUT
       - name: Cache composer dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          # Use composer.json for key, if composer.lock is not committed.
-          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
-      - name: Install Composer dependencies
-        run: |
-          composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
-      - name: run docker-compose
-        run: |
-          docker-compose up -d
-      - name: Detecting PHP Code Standards Violations
-        run: php vendor/bin/phpcs
-      - name: init DB test
-        run: php bin/console d:d:c --env=test && php bin/console d:s:u --force --env=test && php bin/console d:f:l -n --env=test
-      - name: Run Tests
-        run: php bin/phpunit --testsuite integration,unit,system --coverage-text
