--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-latest, macos-12, windows-latest]
+        operating-system: [ubuntu-latest, macos-12]
         php-versions: ['8.2']
     steps:
       - name: Checkout
