--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,4 @@
+#https://github.com/actions/cache/blob/main/examples.md#php---composer
 name: Testing project
 on: [push]
 jobs:
@@ -22,8 +23,7 @@ jobs:
         id: composer-cache
         ##run: echo "::set-output name=dir$(composer config cache-files-dir)"
         run: echo "dir$(composer config cache-files-dir)" $GITHUB_OUTPUT
-      - name: Cache composer dependencies
-        uses: actions/cache@v3
+      - uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
