--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,8 @@ jobs:
         id: composer-cache
         ##run: echo "::set-output name=dir$(composer config cache-files-dir)"
         run: echo "dir$(composer config cache-files-dir)" $GITHUB_OUTPUT
-      - uses: actions/cache@v3
+      - name: Cache composer dependencies
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
